--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http:
-  webview_flutter:
   google_fonts:
+  webview_flutter:
   flutter_spinkit:
   cached_network_image:
+  flutter_launcher_icons:
   intl:
 
 
